--- a/PracticalApp/appsettings.json
+++ b/PracticalApp/appsettings.json
@@ -11,10 +11,10 @@
     "Issuer": "Test.com"
   },
   "Settings": {
-    "ConnectionStrings": "Data Source=rapidposdatabase.eastus.cloudapp.azure.com,1433;Initial Catalog=RapidRMS10015;User ID=SiyaAdmin;Password=RapidSiya$01112021_1!!!"
+    "ConnectionStrings": ""
   },
   "Audience": {
-    "Secret": "Y2F0Y2hlciUyMHdvbmclMjBsb3ZlJTIwLm5ldA==",
+    "Secret": "",
     "Iss": "http://localhost:47201/api/values",
     "Aud": "http://localhost:47201/api/values"
   },
